# Asymptote

./: .gitignore  Cargo.toml  LICENSE  README.md  prj.css  prj.html  proj.css  proj.html  tab.js
pkg/: README.md  package.json  prj.d.ts  prj.js  prj_bg.wasm.d.ts  proj.d.ts  proj.js  proj_bg.js  proj_bg.wasm  proj_bg.wasm.d.ts
pkg/snippets/prj-3fbe914b3ae284ad/: prj.js  tab.js
src/: brush_list.rs  camera.rs  chunk.rs  command.rs  geometry_lib.rs  lib.rs  main.rs  model_list.rs  quad_shader.wgsl  shader.wgsl  shell.rs
src/iced-master/graphics/src/: font.rs
src/iced-master/native/src/widget/: text_input.rs
src/iced-master/style/src/: palette.rs  theme.rs
src/iced-master/style/src/theme/: palette.rs
src/shaders/: blend_shader.wgsl  center_shader.wgsl  depth_shader.wgsl  frag.wgsl  light_shader.wgsl  quad_shader.wgsl  sample_shader.wgsl  shader.wgsl  terrain_shader.wgsl  vert.wgsl
src/shaders/line_shader/: line_shader.wgsl  line_shader_depth.wgsl  line_shader_normal.wgsl
src/shaders/terrain_shader/: terrain_shader.wgsl  terrain_shader_depth.wgsl  terrain_shader_normal.wgsl
src/shaders/triangle_shader/: triangle_shader.wgsl  triangle_shader_depth.wgsl  triangle_shader_normal.wgsl
