[package]
name = "proj"
version = "0.1.0"
edition = "2021"
author = "sycamore"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "proj"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
cgmath = "0.18"
bytemuck = { version = "1.4", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}