[package]
name = "prj"
version = "0.1.0"
edition = "2021"
author = "Psiprobe"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "asymptote"
path = "src/main.rs"

[dependencies]
cfg-if = "1"
env_logger = "0.9"
log = "0.4"
iced_winit = { path = "./src/iced-master/winit" }
iced_wgpu = { path = "./src/iced-master/wgpu"}
pollster = "0.2"
cgmath = "0.18"
bytemuck = { version = "1.4", features = [ "derive" ] }


[target.'cfg(target_arch = "wasm32")'.dependencies]

console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.58", features = ["Element", "HtmlCanvasElement", "Window", "Document"] }



